# achronyme

./: .gitattributes  .gitignore  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  Cargo.toml  DESIGN-array-capture-globals.md  DESIGN-prove-array-captures.md  DESIGN-prove-ir.md  DESIGN-syntax-unification.md  NOTICE  PENDINGS.md  PLAN-beta16-hardening.md  README.md  STRATEGY.md  achronyme-zk-strategy.md  changes.txt  check_output.txt  check_output_2.txt  plan.md  test.ach  test.achb
achronyme-parser/: Cargo.toml  README.md
achronyme-parser/src/: ast.rs  build_ast.rs  diagnostic.rs  error.rs  grammar.pest  lexer.rs  lib.rs  parser.rs  render.rs  token.rs
achronyme-parser/tests/: arithmetic.rs  prove_test.rs
akronc/: Cargo.toml
akronc/src/: error.rs  function_compiler.rs  lib.rs  module_loader.rs  optimizer.rs  scopes.rs  suggest.rs  types.rs
akronc/tests/: arithmetic_test.rs  builtin_registry_alignment.rs  circom_import_e2e.rs  gap_24_multi_module.rs  resolver_shadow_dispatch.rs
artik/: Cargo.toml
artik/src/: builder.rs  error.rs  executor.rs  header.rs  intrinsics.rs  ir.rs  lib.rs  memo.rs  program.rs  validate.rs
artik/tests/: call_return.rs  roundtrip.rs
circom/: Cargo.toml
circom/examples/: profile_compile_baseline.rs  profile_compile_cpu.rs  profile_ecdsa_groth16.rs  profile_eddsa_verifier.rs  profile_pipeline_cpu.rs  profile_sha256_64.rs  profile_sha256_compile.rs  profile_witness_ops.rs
circom/src/: ast.rs  lexer.rs  lib.rs  lib_tests.rs  library.rs  token.rs  version.rs  witness.rs
circom/tests/: adversarial.rs  array_rebind_probe.rs  bug_class_a_discriminate.rs  bug_class_b_discriminate.rs  cross_path_baseline.rs  cross_path_input_audit.rs  cross_validate.rs  deferred_const_output.rs  e2e.rs  e2e_artik_lift.rs  e2e_circomlib.rs  e2e_optimization.rs  e2e_sha256.rs  e2e_var_array.rs  fused_optimize_parity.rs  intrinsics_differential.rs  lean_prove_parity.rs  library_api.rs  num2bits_lysis_inspect.rs  perf_external.rs  perf_profile.rs  probe_dispatch_path_diff.rs  sha256_lysis_inspect.rs  subprogram_lift.rs  witness_replay_post_o1.rs
cli/: Cargo.toml  README.md
cli/src/: args.rs  circom_handler.rs  config.rs  groth16.rs  halo2_proof.rs  init.rs  inspector.html  lib.rs  main.rs  prove_handler.rs  repl.rs  runner.rs  solidity.rs  style.rs
cli/tests/: circom_vm_mode_test.rs  circuit_stats_test.rs  circuit_test.rs  commands_test.rs  cross_path_prove_baseline.rs  e2e_prove_test.rs  halo2_cross_validation.rs  module_test.rs  sha256_via_ach_prove.rs  solidity_e2e_test.rs
compiler/: Cargo.toml  README.md
compiler/src/: codegen.rs  control_flow.rs  error.rs  function_compiler.rs  functions.rs  interner.rs  lib.rs  module_loader.rs  optimizer.rs  plonkish_backend.rs  r1cs_backend.rs  r1cs_error.rs  r1cs_gadgets.rs  r1cs_witness.rs  resolver_adapter.rs  scopes.rs  suggest.rs  types.rs  witness_gen.rs
compiler/tests/: arithmetic_test.rs  bool_prop_test.rs  boolean_vectors.rs  builtin_registry_alignment.rs  circom_import_e2e.rs  circuit_arithmetic_vectors.rs  comparison_vectors.rs  complex_circuits_test.rs  division_vectors.rs  eval_witness_test.rs  gap_24_multi_module.rs  lysis_oracle.rs  malicious_prover_test.rs  merkle_e2e_test.rs  merkle_vectors.rs  mux_select_vectors.rs  plonkish_cross_validation.rs  plonkish_test.rs  proptest_circuit.rs  r1cs_basic_test.rs  r1cs_builtins_test.rs  r1cs_control_flow_test.rs  r1cs_expressions_test.rs  r1cs_integration_test.rs  r1cs_ir_test.rs  r1cs_witness_test.rs  range_check_test.rs  range_check_vectors.rs  resolver_shadow_dispatch.rs  stats_validation_test.rs
constraints/: Cargo.toml
constraints/examples/: o1_cluster_parity.rs  o1_rayon_parity.rs
constraints/src/: backend.rs  export.rs  lib.rs  plonkish.rs  plonkish_export.rs  poseidon.rs  r1cs.rs  r1cs_optimize.rs  segmented_vec.rs  witness.rs
constraints/tests/: circuit_gen_test.rs  export_test.rs  poseidon_vectors.rs  snarkjs_cross_validation.rs
diagnostics/: Cargo.toml
diagnostics/src/: diagnostic.rs  error.rs  lib.rs  render.rs  span.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_artik_decode.rs  fuzz_artik_exec.rs  fuzz_circom_parser.rs  fuzz_ir_lower.rs  fuzz_lysis_decode.rs  fuzz_lysis_validate.rs  fuzz_parser.rs  fuzz_proveir_instantiate.rs  fuzz_r1cs_pipeline.rs  fuzz_r1cs_preservation.rs
ir/: Cargo.toml
ir-core/: Cargo.toml
ir-core/src/: error.rs  lib.rs  types.rs
ir-forge/: Cargo.toml
ir-forge/src/: capture.rs  circom_interop.rs  error.rs  extended.rs  extended_program.rs  lib.rs  lysis_bridge.rs  lysis_materialize.rs  lysis_roundtrip.rs  module_loader.rs  resolver_adapter.rs  suggest.rs  test_utils.rs
ir-forge/tests/: instantiate.rs  types_roundtrip.rs  walker_adversarial.rs  walker_assert_eq_message.rs  walker_internal_error_proptest.rs  walker_spill_proptest.rs
ir/src/: error.rs  eval.rs  inspector.rs  lib.rs  lower.rs  module_loader.rs  stats.rs  types.rs
ir/tests/: circuit_gap_24.rs  idempotence_proptest.rs  lower_test.rs  lysis_round_trip_num2bits.rs  lysis_walker_end_to_end.rs  passes_test.rs  prove_ir_resolver_dispatch.rs  taint_test.rs
lysis/: Cargo.toml
lysis-types/: Cargo.toml
lysis-types/src/: kind.rs  lib.rs  node.rs
lysis/benches/: sha256_round.rs
lysis/src/: builder.rs  config.rs  error.rs  header.rs  lib.rs  program.rs
lysis/tests/: bytecode_fixtures.rs  e2e_round_trip.rs  heap_synthetic.rs  interner_determinism.rs  sha256_64_hard_gate.rs
memory/: Cargo.toml  README.md
memory/benches/: field_kernel.rs
memory/src/: arena.rs  bigint.rs  field.rs  heap.rs  lib.rs  limb_ops.rs  value.rs  value_conv.rs  value_tests.rs
memory/tests/: field_arithmetic_vectors.rs  gc_test.rs
prove-engine/: Cargo.toml
prove-engine/src/: execute.rs  lib.rs  plonkish.rs  r1cs.rs
proving/: Cargo.toml
proving/examples/: groth16_synthetic_timing.rs  plonkish_synthetic_timing.rs
proving/src/: groth16.rs  groth16_bls12_381.rs  groth16_bn254.rs  halo2_proof.rs  lib.rs  solidity.rs
resolve/: Cargo.toml
std/: Cargo.toml
vm/: Cargo.toml  README.md
wasm/: Cargo.toml
witness/: Cargo.toml
zkc/: Cargo.toml
(+1643 files in other folders)
