[workspace]
members = [
    "diagnostics",
    "memory",
    "akron",
    "compiler",
    "constraints",
    "achronyme-parser",
    "cli",
    "ir",
    "std",
    "ach-macros",
    "proving",
    "circom",
    "resolve",
    "artik",
    "lysis",
    "lysis-types",
    "ir-core",
    "ir-forge",
    "zkc",
]
exclude = ["wasm"]
resolver = "2"

[workspace.package]
version = "0.1.0-beta.19"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/achronyme/achronyme"
homepage = "https://achrony.me"
authors = ["Achronyme Contributors"]
keywords = ["zero-knowledge", "zk", "circuits", "compiler", "cryptography"]
categories = ["compilers", "cryptography"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
