[workspace]
members = [
    "diagnostics",
    "memory",
    "akron",
    "akronc",
    "constraints",
    "achronyme-parser",
    "cli",
    "ir",
    "std",
    "ach-macros",
    "proving",
    "circom",
    "resolve",
    "artik",
    "lysis",
    "lysis-types",
    "ir-core",
    "ir-forge",
    "zkc",
]
exclude = ["wasm"]
resolver = "2"

[workspace.package]
version = "0.1.0-beta.20"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/achronyme/achronyme"
homepage = "https://achrony.me"
authors = ["Achronyme Contributors"]
keywords = ["zero-knowledge", "zk", "circuits", "compiler", "cryptography"]
categories = ["compilers", "cryptography"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

# Release-equivalent profile that retains line-table debuginfo so
# external sampling profilers (samply, perf, pprof-rs) can resolve
# Rust frames. Used by the `profile_compile_cpu` example. Compile
# time ~ release; binary size grows by the line tables only.
[profile.profile-cpu]
inherits = "release"
debug = "line-tables-only"
strip = "none"
