[package]
name = "achronyme-parser"
description = "Hand-written Pratt lexer and recursive-descent parser for the Achronyme language."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
