[package]
name = "akronc"
description = "Akron Compiler — lowers Achronyme AST to Akron bytecode. (Constraint-system backends live in `zkc`; ProveIR template compilation in `ir-forge`.)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
memory = { path = "../memory" }
akron = { path = "../akron" }
constraints = { path = "../constraints" }
achronyme-parser = { path = "../achronyme-parser" }
ir = { path = "../ir" }
ir-forge = { path = "../ir-forge" }
circom = { path = "../circom" }
resolve = { path = "../resolve" }
artik = { path = "../artik" }

[dev-dependencies]
proptest = "1"
serde_json = "1"
tempfile = "3"
zkc = { path = "../zkc" }
