[package]
name = "circom"
description = "Circom frontend: parser, analysis, and ProveIR lowering for .circom files."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
diagnostics = { path = "../diagnostics" }
ir = { path = "../ir" }
memory = { path = "../memory" }
artik = { path = "../artik" }

[dev-dependencies]
compiler = { path = "../compiler" }
constraints = { path = "../constraints" }
proving = { path = "../proving" }
akron = { path = "../akron" }
tempfile = "3"
toml = "0.8"
