[package]
name = "circom"
description = "Circom frontend: parser, analysis, and ProveIR lowering for .circom files."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
diagnostics = { path = "../diagnostics" }
ir = { path = "../ir" }
ir-forge = { path = "../ir-forge" }
memory = { path = "../memory" }
artik = { path = "../artik" }

[features]
# Emit `ExtendedInstruction<F>` instead of `Instruction<F>` where the
# Lysis lifter needs to consume the stream. Off by default — the legacy
# `ir::prove_ir::instantiate` path is still the supported production
# pipeline until Phase 5 deletes it. Set via `cargo ... --features
# circom/lysis-frontend` or from the `[circom]` section of
# `achronyme.toml`.
lysis-frontend = []

[dev-dependencies]
akronc = { path = "../akronc" }
zkc = { path = "../zkc" }
constraints = { path = "../constraints" }
proving = { path = "../proving" }
akron = { path = "../akron" }
ir-core = { path = "../ir-core" }
tempfile = "3"
toml = "0.8"
sha2 = "0.10"
