[package]
name = "circom"
description = "Circom frontend: parser, analysis, and ProveIR lowering for .circom files."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
diagnostics = { path = "../diagnostics" }
ir = { path = "../ir" }
ir-forge = { path = "../ir-forge" }
memory = { path = "../memory" }
artik = { path = "../artik" }
num-bigint = "0.4"
num-traits = "0.2"
dhat = { version = "0.3", optional = true }
pprof = { version = "0.14", features = ["flamegraph"], optional = true }

[features]
# Emit `ExtendedInstruction<F>` instead of `Instruction<F>` where the
# Lysis lifter needs to consume the stream. Off by default — the legacy
# `ir::prove_ir::instantiate` path is still the supported production
# pipeline until Phase 5 deletes it. Set via `cargo ... --features
# circom/lysis-frontend` or from the `[circom]` section of
# `achronyme.toml`.
lysis-frontend = []

# Heap profiling for the `profile_*` examples via `dhat-rs`. Off by
# default; opt in with `--features dhat-heap`. Only the example
# binaries set `dhat::Alloc` as global allocator, so enabling this
# feature does not affect library builds or normal `cargo test` runs.
dhat-heap = ["dep:dhat"]

# In-process CPU sampling profile via `pprof-rs`. Used by the
# `profile_compile_cpu` example. Off by default; opt in with
# `--features cpu-profile`. Like `dhat-heap`, this only matters for
# example binaries — library builds and `cargo test` are unaffected.
cpu-profile = ["dep:pprof"]

[dev-dependencies]
akronc = { path = "../akronc" }
# `cross_path_baseline` test imports `zkc::test_support` for the
# frozen-baseline machinery (Phase 2.C).
zkc = { path = "../zkc", features = ["test-support"] }
constraints = { path = "../constraints" }
proving = { path = "../proving" }
akron = { path = "../akron" }
ir-core = { path = "../ir-core" }
tempfile = "3"
toml = "0.8"
sha2 = "0.10"

[[example]]
name = "profile_eddsa_verifier"
required-features = ["dhat-heap"]

[[example]]
name = "profile_sha256_64"
required-features = ["dhat-heap"]

[[example]]
name = "profile_compile_cpu"
required-features = ["cpu-profile"]

[[example]]
name = "profile_pipeline_cpu"
required-features = ["cpu-profile"]

[[example]]
name = "profile_compile_baseline"
