[package]
name = "cli"
description = "Command-line interface for Achronyme: run, compile, circuit, and disassemble."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ach"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
byteorder = "1.5"
getrandom = "0.2"
sha2 = "0.10"
serde_json = "1"
rand = "0.8"
tiny_http = "0.12"
open = "5"

# Groth16 proving (ark-works ecosystem)
ark-groth16 = "0.5"
ark-bn254 = "0.5"
ark-relations = "0.5"
ark-std = "0.5"
ark-serialize = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-snark = "0.5"

# Plonkish proving (halo2/KZG on BN254)
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20", features = ["circuit-params"] }

memory = { path = "../memory" }
vm = { path = "../vm" }
compiler = { path = "../compiler" }
constraints = { path = "../constraints" }
ir = { path = "../ir" }
achronyme-parser = { path = "../achronyme-parser" }
achronyme-std = { path = "../std" }

[dev-dependencies]
tempfile = "3"
