[package]
name = "cli"
description = "Command-line interface for Achronyme: run, compile, circuit, and disassemble."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ach"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
byteorder = "1.5"
getrandom = "0.2"
sha2 = "0.10"
serde_json = "1"
rand = "0.8"
tiny_http = "0.12"
open = "5"

# Proving backends (shared crate)
proving = { path = "../proving" }

memory = { path = "../memory" }
akron = { path = "../akron" }
akronc = { path = "../akronc" }
zkc = { path = "../zkc" }
constraints = { path = "../constraints" }
diagnostics = { path = "../diagnostics" }
ir = { path = "../ir" }
ir-forge = { path = "../ir-forge" }
circom = { path = "../circom" }
achronyme-parser = { path = "../achronyme-parser" }
achronyme-std = { path = "../std" }

[dev-dependencies]
tempfile = "3"
# `cross_path_prove_baseline` test imports `zkc::lysis_oracle::compare`,
# which is gated behind `test-support` since Phase 2.B (the oracle has
# no production callers). Activates the same feature for cli's own
# integration tests.
zkc = { path = "../zkc", features = ["test-support"] }
