[package]
name = "compiler"
description = "Bytecode compiler, R1CS backend, and Plonkish backend for Achronyme."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
memory = { path = "../memory" }
vm = { path = "../vm" }
constraints = { path = "../constraints" }
achronyme-parser = { path = "../achronyme-parser" }
ir = { path = "../ir" }

[dev-dependencies]
proptest = "1"
