[package]
name = "constraints"
description = "R1CS and Plonkish constraint systems, Poseidon hash, and binary export for Achronyme."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
memory = { path = "../memory" }

[dev-dependencies]
compiler = { path = "../compiler" }
ir = { path = "../ir" }
