[package]
name = "constraints"
description = "R1CS and Plonkish constraint systems, Poseidon hash, and binary export for Achronyme."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
memory = { path = "../memory" }
ir-core = { path = "../ir-core" }
serde_json = "1"

[dev-dependencies]
akronc = { path = "../akronc" }
zkc = { path = "../zkc" }
ir = { path = "../ir" }
tempfile = "3"
