[package]
name = "achronyme-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
achronyme-parser = { path = "../achronyme-parser" }
ir = { path = "../ir" }
akronc = { path = "../akronc" }
zkc = { path = "../zkc" }
constraints = { path = "../constraints" }
memory = { path = "../memory" }
artik = { path = "../artik" }
lysis = { path = "../lysis" }
circom = { path = "../circom" }

[workspace]
members = ["."]

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
doc = false

[[bin]]
name = "fuzz_ir_lower"
path = "fuzz_targets/fuzz_ir_lower.rs"
doc = false

[[bin]]
name = "fuzz_r1cs_pipeline"
path = "fuzz_targets/fuzz_r1cs_pipeline.rs"
doc = false

[[bin]]
name = "fuzz_artik_decode"
path = "fuzz_targets/fuzz_artik_decode.rs"
doc = false

[[bin]]
name = "fuzz_artik_exec"
path = "fuzz_targets/fuzz_artik_exec.rs"
doc = false

[[bin]]
name = "fuzz_lysis_decode"
path = "fuzz_targets/fuzz_lysis_decode.rs"
doc = false

[[bin]]
name = "fuzz_lysis_validate"
path = "fuzz_targets/fuzz_lysis_validate.rs"
doc = false

[[bin]]
name = "fuzz_circom_parser"
path = "fuzz_targets/fuzz_circom_parser.rs"
doc = false
