[package]
name = "ir-forge"
description = "Circuit IR front-half: ProveIR AST, ast_lower (language → ProveIR), instantiate pipeline, and the Lysis interop adapters (lysis_lift lifter + lysis_materialize output). Depends on `ir` for the flat-SSA target types (Instruction<F>, SsaVar, IrType) and on `lysis` for the bytecode runtime; consumers like circom and compiler depend on this crate for ProveIR semantics."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
memory = { path = "../memory" }
diagnostics = { path = "../diagnostics" }
ir-core = { path = "../ir-core" }
lysis-types = { path = "../lysis-types" }
lysis = { path = "../lysis" }
achronyme-parser = { path = "../achronyme-parser" }
resolve = { path = "../resolve" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
smallvec = "1"
fixedbitset = "0.5"

[features]
test-support = []

[dev-dependencies]
# Self-reference activates `test-support` when ir-forge's own
# integration tests compile under `cargo test -p ir-forge`. Without
# this, `tests/types_roundtrip.rs` and `tests/instantiate.rs` can't
# resolve `ir_forge::test_utils` because `cfg(test)` doesn't propagate
# from an integration-test crate to its dependency. Workspace-level
# `cargo test --workspace` already activates the feature transitively
# via `ir`/`zkc`'s dev-deps; this entry restores per-package test
# coverage.
ir-forge = { path = ".", features = ["test-support"] }
# Phase 4 — heap-spill walker proptests. Same version as zkc + akronc.
proptest = "1"
