[package]
name = "ir"
description = "SSA intermediate representation, optimization passes, and IR evaluator for Achronyme circuits."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
memory = { path = "../memory" }
constraints = { path = "../constraints" }
achronyme-parser = { path = "../achronyme-parser" }
