[package]
name = "lysis-types"
description = "Leaf crate holding shared vocabulary between Lysis and its consumers (NodeId, InstructionKind, Visibility). Has no workspace deps beyond `memory`, so it can be depended on by both `lysis` and upstream crates without forming a cycle."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
memory = { path = "../memory" }
