[package]
name = "memory"
description = "Tagged values, BN254 field arithmetic, BigInt, and mark-sweep GC heap for Achronyme."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[dev-dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
