[package]
name = "resolve"
description = "Unified dispatch resolver: single symbol table consulted by both the VM bytecode compiler and the ProveIR compiler."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
