[package]
name = "achronyme-std"
description = "Standard library modules for the Achronyme VM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["io"]
io = []

[dependencies]
memory = { path = "../memory" }
akron = { path = "../akron" }
ach-macros = { path = "../ach-macros" }

[dev-dependencies]
akronc = { path = "../akronc" }
resolve = { path = "../resolve" }
