[package]
name = "vm"
version = "0.7.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
byteorder = "1.5.0"
memory = { path = "../memory" }
constraints = { path = "../constraints" }

[dev-dependencies]
compiler = { path = "../compiler" }
constraints = { path = "../constraints" }
ir = { path = "../ir" }
