[package]
name = "vm"
description = "Register-based virtual machine with tagged values and GC for Achronyme."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
byteorder = "1.5.0"
memory = { path = "../memory" }
constraints = { path = "../constraints" }

[dev-dependencies]
compiler = { path = "../compiler" }
constraints = { path = "../constraints" }
ir = { path = "../ir" }
