[package]
name = "achronyme-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
compiler = { path = "../compiler" }
vm = { path = "../vm" }
memory = { path = "../memory" }
ach-lsp-core = { git = "https://github.com/achronyme/achronyme-editor.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
