[package]
name = "achronyme-wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/achronyme/achronyme"
homepage = "https://achrony.me"
authors = ["Achronyme Contributors"]
description = "WASM bindings for the Achronyme compiler, VM, and LSP — powers the browser playground."

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
akronc = { path = "../akronc" }
akron = { path = "../akron" }
memory = { path = "../memory" }
ach-lsp-core = { git = "https://github.com/achronyme/achronyme-editor.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
