[package]
name = "witness"
description = "Artik — dedicated witness-computation VM for Achronyme circuits."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
memory = { path = "../memory" }

[dev-dependencies]
