[package]
name = "zkc"
description = "ZK constraint compiler: lowers SSA IR to R1CS / Plonkish constraint systems, manages witness generation, and dispatches the Lysis-vs-classic oracle. Sits between `ir`/`ir-forge` (frontend SSA) and `proving` (snark proofs)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
memory = { path = "../memory" }
constraints = { path = "../constraints" }
ir = { path = "../ir" }
ir-core = { path = "../ir-core" }
ir-forge = { path = "../ir-forge" }
artik = { path = "../artik" }
# `sha2` is only used inside `zkc::test_support` for canonical-multiset
# hashing in frozen-baseline regression tests (Phase 2.B). Gated as
# optional + activated by the `test-support` feature so production
# builds of zkc don't pull it in.
sha2 = { version = "0.10", optional = true }

[features]
# Re-export test helpers (see `zkc::test_support`) for crates that
# need them outside `cargo test` — currently the cargo-fuzz harness
# at `fuzz/fuzz_targets/fuzz_r1cs_preservation.rs` (Phase 0.4.C) and
# the frozen-baseline pins in `zkc/tests/frozen_baseline.rs` +
# `circom/tests/cross_path_baseline.rs` (Phase 2.B/2.C). Mirrors the
# `ir-forge::test-support` pattern.
test-support = ["dep:sha2"]

[dev-dependencies]
proptest = "1"
serde_json = "1"
tempfile = "3"
constraints = { path = "../constraints" }
akronc = { path = "../akronc" }
proving = { path = "../proving" }
achronyme-parser = { path = "../achronyme-parser" }
ir-forge = { path = "../ir-forge", features = ["test-support"] }
# Self-reference activates `test-support` when zkc's own integration
# tests compile under `cargo test -p zkc`. Without this,
# `tests/r1cs_preservation_proptest.rs` cannot resolve
# `zkc::test_support` because `cfg(test)` does not propagate from an
# integration-test crate to its dependency. Mirrors the ir-forge
# pattern.
zkc = { path = ".", features = ["test-support"] }
